--- a/level1/level1.html
+++ b/level1/level1.html
@@ -15,6 +15,7 @@
         <div class="ui">
             <div class="ui-element timer" >Оставшееся время:10</div>
             <div class="ui-element count">соединено 0/10</div>
+            <div class="ui-element">Соединяйте слова нажимая сначала на одно слово потом на второе связанное</div>
         </div>
         <div class="game-content">
             <div class="left-words words-block">
