--- a/level2/level2.html
+++ b/level2/level2.html
@@ -15,6 +15,7 @@
         <div class="ui">
             <div class="ui-element timer" >Оставшееся время:10</div>
             <div class="ui-element count">Составленно слов: 0</div>
+            <div class="ui-element">собирайте слова из слогов слева в блоках справа с помощью перетаскивания</div>
         </div>
         <div class="game-content">
             <div class="word-spawn game-block"></div>
