--- a/level3/level3.html
+++ b/level3/level3.html
@@ -15,6 +15,7 @@
         <div class="ui">
             <div class="ui-element timer" >Оставшееся время:10</div>
             <div class="ui-element count">Найдено слов: 0</div>
+            <div class="ui-element">Выберите неподходящие слова нажатием мыши</div>
         </div>
         <div class="game-content">
             <div class="text">
