--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
 		</div>
 	  </div>
 	</body>
+	<script src="user.js"></script>
 	<script src="modal.js"></script>
     <script src="script.js"></script>
 </html>
